border-width: initial and border-color: initial cannot be removed via CSSOM. <http://webkit.org/b/68551>

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/css/cssom-remove-shorthand-property.html

When asked to remove a shorthand property, we should toss out both the
sub-properties of that shorthand as well as the shorthand itself, should the
declaration contain it. The latter part was missing in our implementation.

* css/CSSMutableStyleDeclaration.h:
* css/CSSMutableStyleDeclaration.cpp:
(WebCore::CSSMutableStyleDeclaration::removePropertiesInSet):
(WebCore::CSSMutableStyleDeclaration::removeShorthandProperty):

    Changed to return true only if something was actually removed.

LayoutTests:

Add a test verifying that shorthand properties can be added/removed
via CSSOM'S CSSStyleDeclaration interface.

* fast/css/cssom-remove-shorthand-property-expected.txt: Added.
* fast/css/cssom-remove-shorthand-property.html: Added.


Canonical link: https://commits.webkit.org/90433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101970 268f45cc-cd09-0410-ab3c-d52691b4dbfc